# otto

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  MODSEQ_BUG.md  README.md  TODO.md  architecture.md  scope.md
src/: app.rs  cli.rs  errors.rs  lib.rs  main.rs  oauth.rs  onboarding.rs  tui.rs  types.rs
src/app/: style.rs
src/config/: mod.rs
src/imap/: mod.rs
src/sanitize/: mod.rs
src/storage/: db.rs  ops.rs
src/sync/: mod.rs
tests/: imap_modseq_search_response.rs  sanitize_mime_summary.rs
tmp/: linkedin_body.html  messari.eml  messarihtml.html  messaritext.txt  plain.txt  steam.eml
