[package]
name = "otto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
oauth2 = { version = "4.4", features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
keyring = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
url = "2"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dirs = "5"
base64 = "0.21"
regex = "1"
rayon = "1.8"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
html2text = "0.16.5"
once_cell = "1.19"
async-imap = "0.11"
mailparse = "0.15"
tokio-rustls = "0.24"
tokio-util = { version = "0.7", features = ["compat"] }
rustls-native-certs = "0.6"
quoted_printable = "0.5"
deadpool = "0.12"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"

[dev-dependencies]
imap-proto = "0.16.6"

[patch.crates-io]
async-imap = { path = "vendor/async-imap" }
imap-proto = { path = "vendor/imap-proto" }
